@@ -105,7 +105,7 @@ public class ProductServiceImpl implements IProductService {
 
         List<ImageModel> imageModelList = new ArrayList<>();
 
-        if (files != null && !files.getFirst().getName().isEmpty()) {
+        if (files != null && !files.get(0).getName().isEmpty()) {
             for (MultipartFile file : files) {
                 ImageModel imageProduct = null;
                 String fileName = imageService.upload(file);
